--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "illuminate/contracts": "~5.4",
         "illuminate/database": "~5.4",
         "illuminate/http": "~5.4",
-        "illuminate/support": "~5.4",
+        "illuminate/support": "~5.4"
     },
     "autoload": {
         "psr-4": {
