--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   },
   "devDependencies": {
     "axios": "^0.15.3",
+    "cross-env": "^3.2.3",
     "babel-core": "^6.23.1",
     "jquery": "^2.1.4",
-    "laravel-mix": "^0.6.0",
+    "laravel-mix": "0.*",
     "lodash": "^4.16.2",
     "raw-loader": "^0.5.1",
     "uuid": "^3.0.1",
-    "vue": "^2.0.1",
+    "vue": "^2.1.10",
     "vue-router": "^2.3.0"
   }
 }
