--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "vue-router": "^2.3.0",
     "uuid": "^3.0.1",
     "raw-loader": "^0.5.1",
-    "babel-core": "^6.23.1",
+    "babel-core": "^6.23.1"
   }
 }
