--- a/.env.example
+++ b/.env.example
@@ -3,20 +3,21 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
+APP_TITLE=GALASTER
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=galaster
+DB_USERNAME=root
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 QUEUE_DRIVER=sync
 
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
@@ -30,3 +31,13 @@ MAIL_ENCRYPTION=null
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
+
+#管理员配置
+GMF_ADMIN_USER_ID=
+GMF_ADMIN_USER_EMAIL=
+GMF_ADMIN_USER_PWD=
+
+GMF_AUTH_REDIRECT=/app
+GMF_OAUTH_CLIENT_USER=
+GMF_OAUTH_CLIENT_ID=
+GMF_OAUTH_CLIENT_SECRET=
