--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,12 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-APP_TITLE=GALASTER
+APP_TITLE=
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=galaster
+DB_DATABASE=ambsuite
 DB_USERNAME=root
 DB_PASSWORD=root
 
@@ -25,7 +25,7 @@ MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
@@ -37,7 +37,7 @@ GMF_ADMIN_USER_ID=
 GMF_ADMIN_USER_EMAIL=
 GMF_ADMIN_USER_PWD=
 
-GMF_AUTH_REDIRECT=/app
+GMF_AUTH_REDIRECT=/app/dashboard
 GMF_OAUTH_CLIENT_USER=
 GMF_OAUTH_CLIENT_ID=
 GMF_OAUTH_CLIENT_SECRET=
