--- a/.env.example
+++ b/.env.example
@@ -3,41 +3,53 @@ APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
-APP_TITLE=
+APP_NAME=Gmf-Laravel
+APP_LOG=daily
 
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=ambsuite
+DB_DATABASE=gmf
 DB_USERNAME=root
 DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=database
 
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
+MAIL_HOST=
+MAIL_PORT=25
+MAIL_USERNAME=
 MAIL_PASSWORD=
-MAIL_ENCRYPTION=null
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=
+MAIL_FROM_NAME=
+
+NEXMO_KEY=
+NEXMO_SECRET=
+
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
 #管理员配置
-GMF_ADMIN_USER_ID=
+GMF_ADMIN_USER_ID=ec5aef60372b11e7b2612d7b7dc34435
 GMF_ADMIN_USER_EMAIL=
 GMF_ADMIN_USER_PWD=
 
-GMF_AUTH_REDIRECT=/app/dashboard
-GMF_OAUTH_CLIENT_USER=
-GMF_OAUTH_CLIENT_ID=
-GMF_OAUTH_CLIENT_SECRET=
+GMF_AUTH_REDIRECT=/
+GMF_OAUTH_CLIENT_USER=ec5aef60372b11e7b2612d7b7dc34435
+GMF_OAUTH_CLIENT_ID=67e53c50fabf11e79e61230ccb6b0e9c
+GMF_OAUTH_CLIENT_SECRET=cc2a153034c311e7ac187b3124cdcd94
+
+GMF_ENT_ID=4f95c06028d511e7bb351569a8a51d7d
+GMF_ENT_NAME=演示企业
+
+ESHost=http://localhost:9200
