--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
 /node_modules
-/public/storage
-/public/hot
 /public/*.json
+/public/hot
+/public/storage
 /storage/*.key
 /vendor
-/.vagrant
 /.idea
+/.vagrant
 Homestead.json
 Homestead.yaml
-composer.lock
 /*.log
+/*.log.*
 .env
+composer.lock
+package-lock.json
+composer.json
+*.test
