--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,17 @@
 {
-    "name": "gyonyou/ghub-laravel",
-    "description": "u9hub.yonyou.com.",
-    "keywords": ["framework", "laravel"],
+    "name": "gmf/gmf-laravel",
+    "description": "gmf laravel",
+    "keywords": ["gmf","framework", "laravel"],
     "license": "MIT",
     "type": "project",
     "require": {
         "php": ">=7.0.0",
         "elasticsearch/elasticsearch": "~5.0",
-        "fideloper/proxy": "~3.3",
-        "firebase/php-jwt": "~3.0|~4.0",
-        "guzzlehttp/guzzle": "~6.0",
+        "fideloper/proxy": "~3.*",
         "laravel/framework": "5.5.*",
-        "ggoop/gmf-sys": "dev-master",
+        "ggoop/gmf-sys": "^1.2",
         "laravel/tinker": "~1.0",
-        "league/oauth2-server": "^6.0",
-        "nexmo/client": "^1.2",
         "phpseclib/phpseclib": "^2.0",
-        "simplesoftwareio/simple-qrcode": "~2",
         "symfony/psr-http-message-bridge": "~1.0",
         "zendframework/zend-diactoros": "~1.0"
     },
