--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "elasticsearch/elasticsearch": "~5.0",
-        "fideloper/proxy": "~3.*",
+        "fideloper/proxy": "^3.*",
         "laravel/framework": "5.5.*",
         "ggoop/gmf-sys": "^1.2",
         "laravel/tinker": "~1.0",
