--- a/composer.json
+++ b/composer.json
@@ -1,75 +1,81 @@
 {
-    "name": "ggoop/gmf-laravel",
-    "description": "ggoop gmf laravel",
-    "keywords": ["gmf","framework", "laravel"],
-    "license": "MIT",
-    "type": "project",
-    "require": {
-        "php": ">=7.0.0",
-        "elasticsearch/elasticsearch": "~5.0",
-        "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
-        "ggoop/gmf-sys": "^1.2",
-        "laravel/tinker": "~1.0",
-        "phpseclib/phpseclib": "^2.0",
-        "symfony/psr-http-message-bridge": "~1.0",
-        "zendframework/zend-diactoros": "~1.0"
-    },
-    "require-dev": {
-        "doctrine/dbal": "^2.5",
-        "filp/whoops": "~2.0",
-        "fzaninotto/faker": "~1.4",
-        "hisorange/browser-detect": "^3.1",
-        "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
-    },
-    "autoload": {
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ],
-        "psr-4": {
-            "App\\": "app/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tests\\": "tests/"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "dont-discover": [
-            ]
-        }
-    },
-    "scripts": {
-        "gmf-install": [
-            "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
-            "php artisan key:generate",
-            "php artisan storage:link",
-            "php artisan passport:keys"
-        ],
-        "post-root-package-install": [
-            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-        ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate"
-        ],
-        "post-autoload-dump": [
-            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover"
-        ]
-    },
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
-    },
-    "repositories": {
-        "packagist": {
-            "type": "composer",
-            "url": "https://packagist.phpcomposer.com"
-        }
+  "name": "ggoop/gmf-laravel",
+  "description": "ggoop gmf laravel",
+  "keywords": ["gmf", "framework", "laravel"],
+  "license": "MIT",
+  "type": "project",
+  "require":
+  {
+    "php": ">=7.0.0",
+    "fideloper/proxy": "~3.3",
+    "laravel/framework": "5.5.*",
+    "ggoop/gmf-sys": "^1.2",
+    "laravel/tinker": "~1.0"
+  },
+  "require-dev":
+  {
+    "filp/whoops": "~2.0",
+    "fzaninotto/faker": "~1.4",
+    "mockery/mockery": "0.9.*",
+    "phpunit/phpunit": "~6.0",
+    "symfony/thanks": "^1.0"
+  },
+  "autoload":
+  {
+    "classmap": [
+      "database/seeds",
+      "database/factories"
+    ],
+    "psr-4":
+    {
+      "App\\": "app/"
     }
+  },
+  "autoload-dev":
+  {
+    "psr-4":
+    {
+      "Tests\\": "tests/"
+    }
+  },
+  "extra":
+  {
+    "laravel":
+    {
+      "dont-discover": []
+    }
+  },
+  "scripts":
+  {
+    "gmf-install": [
+      "php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
+      "php artisan key:generate",
+      "php artisan storage:link",
+      "php artisan passport:keys"
+    ],
+    "post-root-package-install": [
+      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+    ],
+    "post-create-project-cmd": [
+      "@php artisan key:generate"
+    ],
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover"
+    ]
+  },
+  "config":
+  {
+    "preferred-install": "dist",
+    "sort-packages": true,
+    "optimize-autoloader": true
+  },
+  "repositories":
+  {
+    "packagist":
+    {
+      "type": "composer",
+      "url": "https://packagist.phpcomposer.com"
+    }
+  }
 }
