--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "fideloper/proxy": "~3.3",
     "laravel/framework": "5.5.*",
     "ggoop/gmf-sys": "^1.2",
-    "laravel/tinker": "~1.0"
+    "laravel/tinker": "~1.0",
+    "hisorange/browser-detect": "^3.1"
   },
   "require-dev":
   {
