--- a/.env.example
+++ b/.env.example
@@ -40,16 +40,12 @@ PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 
 #管理员配置
-GMF_ADMIN_USER_ID=DummyProjectUserID
-GMF_ADMIN_USER_EMAIL=
+GMF_ADMIN_USER_ACCOUNT=
 GMF_ADMIN_USER_PWD=
 
 GMF_AUTH_REDIRECT=/
-GMF_OAUTH_CLIENT_USER=DummyProjectUserID
-GMF_OAUTH_CLIENT_ID=DummyProjectClientID
-GMF_OAUTH_CLIENT_SECRET=DummyProjectClientSECRET
 
-GMF_ENT_ID=DummyProjectEntID
-GMF_ENT_NAME=演示企业
+GMF_ENT_CODE=DummyProjectEntID
+GMF_ENT_NAME=DummyProjectName
 
 ESHost=http://localhost:9200
