--- a/.env.example
+++ b/.env.example
@@ -48,4 +48,6 @@ GMF_AUTH_REDIRECT=/
 GMF_ENT_CODE=DummyProjectEntID
 GMF_ENT_NAME=DummyProjectName
 
+GMF_OAUTH_CLIENT_ID=DummyProjectClientID
+
 ESHost=http://localhost:9200
