--- a/package.json
+++ b/package.json
@@ -10,51 +10,20 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "axios": "^0.16.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^5.1",
-    "highlight.js": "^9.12.0",
-    "laravel-mix": "^2.0",
-    "ora": "^1.3.0",
-    "raw-loader": "^0.5.1",
-    "sinon": "^4.1.1",
-    "url-loader": "^0.6.2"
+    "laravel-mix": "^2.0"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "chart.js": "^2.7.1",
-    "d3": "^4.12.2",
-    "date-fns": "^1.29.0",
-    "deepmerge": "^2.0.1",
-    "fuzzysearch": "^1.0.3",
-    "highcharts": "^5.0.14",
-    "is-firefox": "^1.0.3",
-    "is-promise": "^2.1.0",
-    "iscroll": "^5.2.0",
-    "lodash": "^4.17.4",
-    "moment": "^2.20.1",
+    "axios": "^0.18.0",
+    "gmf-ui": "^1.1.3",
     "pdfjs-dist": "^2.0.252",
-    "popper.js": "^1.13.0",
+    "prettier": "^1.12.1",
     "prismjs": "^1.10.0",
-    "promise-polyfill": "^7.0.0",
-    "quill": "^1.3.3",
-    "raf": "^3.4.0",
-    "tinymce": "^4.7.4",
-    "uuid": "^3.0.1",
-    "vue": "^2.5.13",
-    "vue-ga": "^1.0.0",
-    "vue-i18n": "^7.3.3",
-    "vue-loader": "^13.6.2",
-    "vue-router": "^3.0.1",
-    "vue-style-loader": "^3.0.3",
-    "vue-template-compiler": "^2.5.13",
-    "vuelidate": "^0.6.1",
-    "vuex": "^3.0.1",
-    "vuex-router-sync": "^5.0.0",
-    "xlsx": "^0.11.16"
+    "vue": "^2.5.13"
   },
   "engines": {
     "node": ">= 7.0"
