--- a/composer.json
+++ b/composer.json
@@ -7,29 +7,19 @@
   "require":
   {
     "php": ">=7.0.0",
-    "elasticsearch/elasticsearch": "~5.0",
     "fideloper/proxy": "~3.3",
-    "firebase/php-jwt": "~3.0|~4.0",
-    "guzzlehttp/guzzle": "~6.0",
     "laravel/framework": "5.5.*",
+    "ggoop/gmf-sys": "dev-master",
     "laravel/tinker": "~1.0",
-    "league/oauth2-server": "^6.0",
-    "nexmo/client": "^1.2",
-    "phpseclib/phpseclib": "^2.0",
-    "simplesoftwareio/simple-qrcode": "~2",
-    "symfony/psr-http-message-bridge": "~1.0",
-    "maatwebsite/excel": "^3.0",
-    "zendframework/zend-diactoros": "~1.0"
-
+    "hisorange/browser-detect": "^3.1"
   },
   "require-dev":
   {
-    "doctrine/dbal": "^2.5",
     "filp/whoops": "~2.0",
     "fzaninotto/faker": "~1.4",
-    "hisorange/browser-detect": "^3.1",
     "mockery/mockery": "0.9.*",
-    "phpunit/phpunit": "~6.0"
+    "phpunit/phpunit": "~6.0",
+    "symfony/thanks": "^1.0"
   },
   "autoload":
   {
@@ -39,8 +29,7 @@
     ],
     "psr-4":
     {
-      "App\\": "app/",
-      "Gmf\\Sys\\": "../gmf-sys/src/"
+      "App\\": "app/"
     }
   },
   "autoload-dev":
