--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,9 @@
   "type": "project",
   "require":
   {
-    "php": ">=7.0.0",
-    "fideloper/proxy": "~3.3",
-    "laravel/framework": "5.5.*",
+    "php": ">=7.1.3",
+    "fideloper/proxy": "^4.0",
+    "laravel/framework": "5.6.*",
     "ggoop/gmf-sys": "dev-master",
     "laravel/tinker": "~1.0",
     "hisorange/browser-detect": "^3.1"
@@ -77,6 +77,10 @@
     {
       "type": "composer",
       "url": "https://packagist.phpcomposer.com"
+    },
+    "ggoop":{
+      "type": "path",
+      "url": "D:/project/gmf/gmf-sys"
     }
   }
 }
