--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 APP_NAME=DummyProjectName
 
+LOG_CHANNEL=daily
+
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
